[package]
name = "neutron-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neutron-types = { path = "../neutron-types" }

tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
dashmap.workspace = true
