[package]
name = "neutron-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neutron-types = { path = "../neutron-types" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
toml.workspace = true
colored.workspace = true
chrono.workspace = true
url.workspace = true
uuid.workspace = true
futures.workspace = true
