[package]
name = "neutron-js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neutron-core = { path = "../neutron-core" }
neutron-types = { path = "../neutron-types" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
lazy_static.workspace = true
url.workspace = true
scraper.workspace = true
