[package]
name = "neutron-subdomain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neutron-core = { path = "../neutron-core" }
neutron-types = { path = "../neutron-types" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
trust-dns-resolver.workspace = true
regex.workspace = true
url.workspace = true
uuid.workspace = true
scraper.workspace = true
