[package]
name = "neutron-tech"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neutron-types = { path = "../neutron-types" }
neutron-core = { path = "../neutron-core" }

tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
regex.workspace = true
lazy_static.workspace = true
