[package]
name = "neutron-vuln-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
scraper = "0.20"
regex = "1.10"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
urlencoding = "2.1.3"
